Get a User model up and running

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,11 @@ html, body {
   margin: 0;
   padding: 0;
   color: #333;
+
+  h1, h2, h3, h4, h5 {
+    font-family: 'Changa One', arial, sans-serif;
+    font-weight: normal;
+  }
 }
 
 header {
