--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,1 +1,20 @@
-<h1>Welcome!</h1>
+<%= form_tag sign_in_path, class: 'user-session' do %>
+  <h2>Sign in</h2>
+
+  <div class="input-field">
+    <%= text_field_tag :email, nil, placeholder: 'Email' %>
+  </div>
+
+  <div class="input-field">
+    <%= password_field_tag :password, nil, placeholder: 'Password' %>
+    <div class="help">
+      <%= link_to 'I forgot my password!' %>
+    </div>
+  </div>
+
+  <%= submit_tag 'Sign in', id: 'session-submit' %>
+
+  <p>Or</p>
+
+  <%= link_to 'Create an account' %>
+<% end %>
