--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,10 @@
 
   <section class="container">
     <div id="main-content">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, id: 'flash', class: "flash_#{name}" %>
+      <% end %>
+
       <%= yield %>
     </div>
   </section>
