--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <h1>My Tweets</h1>
-      <h2>Get all of your Tweets in JSON, no huss, no fuss</h2>
+      <h2>Your Tweets. In JSON.</h2>
     </div>
   </header>
 
