--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,4 +1,4 @@
-form#user-session {
+form.user-form {
   text-align: center;
 
   div.input-field {
@@ -21,7 +21,7 @@ form#user-session {
     }
   }
 
-  #session-submit {
+  input[type=submit] {
     @include button;
     font-size: 18px;
     width: 300px;
