Allow basic ability to create Twitter authorizations

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag sign_in_path, id: 'user-session', class: 'user-form' do %>
+<%= form_tag sign_in_path, id: 'user-session', class: 'form' do %>
   <h2>Sign in</h2>
 
   <div class="input-field">
