--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, html: { class: 'user-form' } do |f| %>
+<%= form_for @user, html: { class: 'form' } do |f| %>
   <h2>Create a new account</h2>
 
   <div class="input-field">
