Rename to "Get-My-Tweets"

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MyTweets</title>
+  <title>GetMyTweets</title>
   <link href="http://fonts.googleapis.com/css?family=Changa+One" rel="stylesheet" type="text/css">
 
   <%= stylesheet_link_tag    'application', :media => 'all' %>
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="container">
-      <h1>My Tweets</h1>
+      <h1>Get My Tweets</h1>
       <h2>Your Tweets. In JSON.</h2>
     </div>
   </header>
