Clean up formatting

--- a/app/views/authorizations/show.html.erb
+++ b/app/views/authorizations/show.html.erb
@@ -34,5 +34,6 @@ $.ajax({
 
 <span class="highlight">
   <strong>Note:</strong> the ':' is required after your API key, and the whole string
-  must be base64 encoded. <%= link_to 'Available library', 'http://ostermiller.org/calc/encode.html' %>
+  must be base64 encoded.
 </span>
+<%= link_to 'Javascript library to base64 encode', 'http://ostermiller.org/calc/encode.html' %>
