--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,12 @@
-<p>
-  Signed-in as: <%= @user.email %> |
-  <%= link_to 'sign out', sign_out_path, method: :delete %>
+<header>
+  <p>
+    You're currently signed-in as: <strong><%= @user.email %></strong>
+  </p>
+  <%= link_to 'Not you?', sign_out_path, method: :delete %>
+  or
   <%= link_to 'Delete my account', user_path(@user), method: :delete,
     confirm: 'Are you sure you want to delete your account?' %>
-</p>
+</header>
 
 <div id="api-keys">
   <h3>Your API Access Keys</h3>
