--- a/app/views/authorizations/show.html.erb
+++ b/app/views/authorizations/show.html.erb
@@ -1,3 +1,7 @@
+<p>
+  <%= link_to '← Back to my account', root_path %>
+</p>
+
 <h2>Twitter Username: "<%= @authorization.username %>"</h2>
 
 <p>How do I get my tweets?</p>
